# broadside-stitch

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
nextflow/: environment.yml  example-nextflow.config  pom.xml
nextflow/pipelines/: prepare-cube-alignment.nf  prepare-rounds.nf  process-scenes.nf  stitch.nf
nextflow/src/main/java/edu/harvard/bwh/jonaslab/broadside/: CheckSlideStatus.java  Scene.java  Slide.java
src/broadside/adjustments/: alignment.py  hot_pixels.py
src/broadside/scripts/: assess_illum_profiles.py  assess_tissue_loss.py  compute_cube_alignments.py  make_illum_profiles.py  make_unmixing_mosaic.py  register_and_stitch.py  stack_tiles.py  tiff_to_zarr.py  write_ome_metadata.py
src/broadside/utils/: __init__.py  arrays.py  geoms.py  io.py  parallel.py  search.py  units.py
