[tool.poetry]
name = "broadside-stitch"
version = "0.1.0"
description = "Stitching for the Laboratory for Bio-Micro Devices @ BWH"
readme = "README.md"
license = "LICENSE"
authors = ["Sebastian Ahn <wahn1@bwh.harvard.edu>"]
keywords = [
    "microscopy",
    "imaging",
    "bio-imaging"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing"
]
repository = "https://github.com/biomicrodev/broadside-stitch"
homepage = "https://jonaslab.bwh.harvard.edu"
packages = [{ include = "broadside", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ashlar = "^1.17"
bmd-perf = { git = "https://github.com/biomicrodev/bmd-perf.git", branch = "master" }
bokeh = ">=2.4.2,<3"
dask = "^2023.3"
distributed = "^2023.3"
imageio = "^2.26"
joblib = "^1.2.0"
matplotlib = "^3.7"
numba = "^0.56"
numcodecs = "^0.11"
numpy = ">=1.23"
ome-types = "^0.3"
ome-zarr = "^0.6"
opencv-python = "^4.7"
pandas = "^1.5"
pillow = "^9.4"
pint = "^0.20"
pybasic = { git = "https://github.com/biomicrodev/pybasic.git", branch = "master" }
scikit-image = "^0.19"
scipy = "^1.8"
structlog = "^22.3"
tifffile = "^2023.2"
zarr = "^2.14"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.1", extras = ["d"] }

[tool.poetry.scripts]
assess-illum-profiles = "broadside.scripts.assess_illum_profiles:run"
assess-tissue-loss = "broadside.scripts.assess_tissue_loss:run"
compute-cube-alignments = "broadside.scripts.compute_cube_alignments:run"
make-illum-profiles = "broadside.scripts.make_illum_profiles:run"
make-unmixing-mosaic = "broadside.scripts.make_unmixing_mosaic:run"
register-and-stitch = "broadside.scripts.register_and_stitch:run"
stack-tiles = "broadside.scripts.stack_tiles:run"
tiff-to-zarr = "broadside.scripts.tiff_to_zarr:run"
write-ome-metadata = "broadside.scripts.write_ome_metadata:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
